--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
-	<head>
-    <title>{{ page.title }}</title>
-    <link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
+  {% include head.html %}
 
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
+  <body>
 
+    <div class="container content">
+      <header class="masthead">
+        <h3 class="masthead-title">
+          <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a>
+          <small>{{ site.tagline }}</small>
+        </h3>
+      </header>
+
+      <main>
         {{ content }}
+      </main>
 
-		<footer>
-    		<ul>
-        		<li><a href="mailto:dacosta@ensta.fr">email</a></li>
-        		<li><a href="https://github.com/gdcs92">github.com/gdcs92</a></li>
-			</ul>
-		</footer>
-	</body>
+      <footer class="footer">
+        <small>
+          &copy; <time datetime="{{ site.time | date_to_xmlschema }}">{{ site.time | date: '%Y' }}</time>. All rights reserved.
+        </small>
+      </footer>
+    </div>
+
+  </body>
 </html>
