--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  {% include head.html %}
+  <head>
+    <meta charset="UTF-8">
+    <link href="http://gmpg.org/xfn/11" rel="profile">
+
+    <!-- Enable responsiveness on mobile devices-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>
+      {% if page.title == "Home" %}
+        {{ site.title }} &middot; {{ site.tagline }}
+      {% else %}
+        {{ page.title }} &middot; {{ site.title }}
+      {% endif %}
+    </title>
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="{{ site.baseurl }}/styles.css">
+  </head>
 
   <body>
 
