--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,8 @@
       <header class="masthead">
         <h3 class="masthead-title">
           <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a>
-          <small>{{ site.tagline }}</small>
+          <small>what's going on here? </small>
+          {{ page.title }}
         </h3>
       </header>
 
