--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,8 +26,9 @@
       <header class="masthead">
         <h3 class="masthead-title">
           <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a>
-          <small>what's going on here? </small>
-          {{ page.title }}
+          {% for page in site.pages_list %}
+              &nbsp;&nbsp;&nbsp;<small><a href="{{ page[1]  }}">{{ page[0] }}</a></small>
+          {% endfor %}
         </h3>
       </header>
 
