--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -6,6 +6,7 @@
   padding-top:    1rem;
   padding-bottom: 1rem;
   margin-bottom: 3rem;
+  border-bottom: 2px solid #c7c7c7;
 }
 
 .masthead-title {
