--- a/_sass/_vitae.scss
+++ b/_sass/_vitae.scss
@@ -3,7 +3,7 @@
 
   .resume-item-title {
     @include sans_bold;
-    margin: 0 0 .75rem;
+    margin: 0 0 3.75rem;
     font-size: 1.5rem;
     letter-spacing: -.05rem;
     line-height: 1;
